// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.add bonus 1`] = `
Object {
  "accuracy": 0,
  "courage": 0,
  "description": Array [
    "test1",
    "test2",
  ],
  "evasion": 0,
  "hunt xp": 0,
  "insanity": 0,
  "strength": 1,
  "survival": 0,
  "understanding": 0,
}
`;

exports[`.add empty bonus 1`] = `
Object {
  "accuracy": 0,
  "courage": 0,
  "description": Array [],
  "evasion": 0,
  "hunt xp": 0,
  "insanity": 0,
  "strength": 0,
  "survival": 0,
  "understanding": 0,
}
`;

exports[`.remove bonus 1`] = `
Object {
  "accuracy": 0,
  "courage": 0,
  "description": Array [],
  "evasion": 0,
  "hunt xp": 0,
  "insanity": 0,
  "strength": 0,
  "survival": 0,
  "understanding": 0,
}
`;

exports[`.remove empty bonus 1`] = `
Object {
  "accuracy": 0,
  "courage": 0,
  "description": Array [],
  "evasion": 0,
  "hunt xp": 0,
  "insanity": 0,
  "strength": 0,
  "survival": 0,
  "understanding": 0,
}
`;

exports[`.remove empty bonus description 1`] = `
Object {
  "accuracy": 0,
  "courage": 0,
  "description": Array [],
  "evasion": 0,
  "hunt xp": 0,
  "insanity": 0,
  "strength": 0,
  "survival": 0,
  "understanding": 0,
}
`;

exports[`.remove one bonus 1`] = `
Object {
  "accuracy": 0,
  "courage": 0,
  "description": Array [
    "test3",
  ],
  "evasion": 1,
  "hunt xp": 0,
  "insanity": 0,
  "strength": 1,
  "survival": 0,
  "understanding": 0,
}
`;

exports[`initializes 1`] = `
Object {
  "accuracy": 0,
  "courage": 0,
  "description": Array [],
  "evasion": 0,
  "hunt xp": 0,
  "insanity": 0,
  "strength": 0,
  "survival": 0,
  "understanding": 0,
}
`;
